8358738: AOT cache created without graal jit should not be used with graal jit